docs/tests/typing/bad/testfile-arith-1.cpp
class S { public: int a; };
int main() { S s; s+s; }
